--- a/makefile.win32
+++ b/makefile.win32
@@ -22,8 +22,9 @@ MAKE = make
 # Note: && is needed after cd because each line is executed in a different
 # shell. (cd .. is just for clarity).
 all: config.h
+	cd tagmanager/ctags && $(MAKE) -f makefile.win32 && cd ../..
 	cd tagmanager/mio && $(MAKE) -f makefile.win32 && cd ../..
-	cd tagmanager && $(MAKE) -f makefile.win32 && cd ..
+	cd tagmanager/src && $(MAKE) -f makefile.win32 && cd ../..
 	cd scintilla && $(MAKE) -f makefile.win32 && cd ..
 	cd plugins && $(MAKE) -f makefile.win32 && cd ..
 	cd src && $(MAKE) -f makefile.win32 && cd ..
@@ -32,15 +33,16 @@ config.h: win32-config.h
 	$(CP) $< $@
 
 deps:
-	-$(RM) tagmanager/mio/deps.mak tagmanager/deps.mak scintilla/deps.mak plugins/deps.mak src/deps.mak
+	-$(RM) tagmanager/ctags/deps.mak tagmanager/mio/deps.mak tagmanager/src/deps.mak scintilla/deps.mak plugins/deps.mak src/deps.mak
 
 # used by src/makefile.win32 to avoid del ../file which is an error
 clean-local:
 	-$(RM) geany_private.res geany.exe
 
 clean: deps
+	cd tagmanager/ctags && $(MAKE) -f makefile.win32 clean && cd ../..
 	cd tagmanager/mio && $(MAKE) -f makefile.win32 clean && cd ../..
-	cd tagmanager && $(MAKE) -f makefile.win32 clean && cd ..
+	cd tagmanager/src && $(MAKE) -f makefile.win32 clean && cd ../..
 	cd scintilla && $(MAKE) -f makefile.win32 clean && cd ..
 	cd plugins && $(MAKE) -f makefile.win32 clean && cd ..
 	cd src && $(MAKE) -f makefile.win32 clean && cd ..
