--- a/src/makefile.win32
+++ b/src/makefile.win32
@@ -85,9 +85,9 @@ exec:
 binclean:
 	$(RM) $(TARGET)
 
-$(TARGET): $(OBJS) $(RES) ../scintilla/scintilla.a ../tagmanager/mio/mio.a ../tagmanager/tagmanager.a
+$(TARGET): $(OBJS) $(RES) ../scintilla/scintilla.a ../tagmanager/ctags/ctags.a ../tagmanager/mio/mio.a ../tagmanager/src/tagmanager.a
 	$(CXX) $(OBJS) $(RES) -o $(TARGET) \
-	../scintilla/scintilla.a ../tagmanager/tagmanager.a ../tagmanager/mio/mio.a \
+	../scintilla/scintilla.a ../tagmanager/ctags/ctags.a ../tagmanager/src/tagmanager.a ../tagmanager/mio/mio.a \
 	$(ALL_GTK_LIBS) $(WIN_LIBS)
 
 deps.mak:
