--- a/tagmanager/ctags/makefile.win32
+++ b/tagmanager/ctags/makefile.win32
@@ -7,7 +7,9 @@ PREFIX = C:/libs
 RM = del
 -include ../../localwin32.mk
 
-COMPLIB=mio.a
+COMPLIB=ctags.a
+
+REGEX_DEFINES = -DHAVE_REGCOMP -DSTDC_HEADERS=1
 
 GTK_INCLUDES= \
 	-I$(PREFIX)/include/gtk-2.0 \
@@ -21,7 +23,7 @@ GTK_INCLUDES= \
 	-I$(PREFIX)/include \
 	-I$(PREFIX)/include/gettext
 
-INCLUDEDIRS=-I include $(GTK_INCLUDES)
+INCLUDEDIRS=-I ../ -I . $(GTK_INCLUDES)
 
 CBASEFLAGS=-Wall -pipe -mms-bitfields -DPACKAGE=\"geany\" -DG_OS_WIN32 -Wno-missing-braces -Wno-char-subscripts $(INCLUDEDIRS)
 ifdef DEBUG
@@ -31,14 +33,19 @@ CFLAGS=-O2 $(CBASEFLAGS)
 endif
 
 .c.o:
-	$(CC) $(CFLAGS) -w -c $<
+	$(CC) $(REGEX_DEFINES) $(CFLAGS) -w -c $<
 
 all: $(COMPLIB)
 
 clean:
 	-$(RM) deps.mak *.o $(COMPLIB)
 
-$(COMPLIB): mio.o
+$(COMPLIB): abc.o args.o c.o cobol.o fortran.o make.o conf.o pascal.o perl.o php.o diff.o vhdl.o verilog.o lua.o js.o \
+actionscript.o nsis.o objc.o \
+haskell.o haxe.o html.o python.o lregex.o rest.o sh.o ctags.o entry.o get.o keyword.o nestlevel.o \
+options.o \
+parse.o basic.o read.o sort.o strlist.o latex.o markdown.o matlab.o docbook.o tcl.o ruby.o asm.o sql.o txt2tags.o css.o \
+vstring.o r.o
 	$(AR) rc $@ $^
 	$(RANLIB) $@
 
