--- a/tagmanager/src/makefile.win32
+++ b/tagmanager/src/makefile.win32
@@ -5,7 +5,7 @@ AR = ar
 RANLIB = ranlib
 PREFIX = C:/libs
 RM = del
--include ../localwin32.mk
+-include ../../localwin32.mk
 
 COMPLIB=tagmanager.a
 
@@ -23,7 +23,7 @@ GTK_INCLUDES= \
 	-I$(PREFIX)/include \
 	-I$(PREFIX)/include/gettext
 
-INCLUDEDIRS=-I include -I mio -I . $(GTK_INCLUDES)
+INCLUDEDIRS=-I ../ -I ../mio -I . $(GTK_INCLUDES)
 
 CBASEFLAGS=-Wall -pipe -mms-bitfields -DPACKAGE=\"geany\" -DG_OS_WIN32 -Wno-missing-braces -Wno-char-subscripts $(INCLUDEDIRS)
 ifdef DEBUG
@@ -40,13 +40,8 @@ all: $(COMPLIB)
 clean:
 	-$(RM) deps.mak *.o $(COMPLIB)
 
-$(COMPLIB): abc.o args.o c.o cobol.o fortran.o make.o conf.o pascal.o perl.o php.o diff.o vhdl.o verilog.o lua.o js.o \
-actionscript.o nsis.o objc.o \
-haskell.o haxe.o html.o python.o lregex.o rest.o sh.o ctags.o entry.o get.o keyword.o nestlevel.o \
-options.o \
-parse.o basic.o read.o sort.o strlist.o latex.o markdown.o matlab.o docbook.o tcl.o ruby.o asm.o sql.o txt2tags.o css.o \
-vstring.o tm_workspace.o tm_work_object.o tm_source_file.o tm_project.o tm_tag.o \
-tm_symbol.o tm_file_entry.o tm_tagmanager.o r.o
+$(COMPLIB): tm_workspace.o tm_work_object.o tm_source_file.o tm_project.o tm_tag.o \
+tm_symbol.o tm_file_entry.o tm_tagmanager.o
 	$(AR) rc $@ $^
 	$(RANLIB) $@
 
