--- a/data/colorschemes/alt.conf
+++ b/data/colorschemes/alt.conf
@@ -13,7 +13,7 @@ error=0xffffff;0xff0000
 # Editor styles
 #-------------------------------------------------------------------------------
 
-selection=0x000000;0xc0c0c0;false;false
+selection=0x000000;0xc0c0c0;false;true
 current_line=0x000000;0xf0f0f0;true
 brace_good=0x0000ff;0xFFFFFF;true;false
 brace_bad=0xff0000;0xFFFFFF;true;false
