Do not suppress warnings (Windows makefiles)
Also do not define G_OS_WIN32.

--- a/scintilla/makefile.win32
+++ b/scintilla/makefile.win32
@@ -57,7 +57,7 @@ MARSHALLER=scintilla-marshal.o
 .cxx.o:
 	$(CC) $(CXXFLAGS) -c $<
 .c.o:
-	$(CCOMP) $(CXXFLAGS) -w -c $<
+	$(CCOMP) $(CXXFLAGS) -c $<
 
 LEXOBJS=\
 LexAda.o \
