Don't suppress warnings or define G_OS_WIN32 (Windows build)

--- a/tagmanager/src/makefile.win32
+++ b/tagmanager/src/makefile.win32
@@ -25,7 +25,7 @@ GTK_INCLUDES= \
 
 INCLUDEDIRS=-I ../ctags -I ../ -I . $(GTK_INCLUDES)
 
-CBASEFLAGS=-Wall -pipe -mms-bitfields -DPACKAGE=\"geany\" -DG_OS_WIN32 -Wno-missing-braces -Wno-char-subscripts $(INCLUDEDIRS)
+CBASEFLAGS=-Wall -pipe -mms-bitfields -DPACKAGE=\"geany\" -Wno-missing-braces -Wno-char-subscripts $(INCLUDEDIRS)
 ifdef DEBUG
 CFLAGS= -O0 -g $(CBASEFLAGS)
 else
@@ -33,7 +33,7 @@ CFLAGS=-O2 $(CBASEFLAGS)
 endif
 
 .c.o:
-	$(CC) $(REGEX_DEFINES) $(CFLAGS) -w -c $<
+	$(CC) $(REGEX_DEFINES) $(CFLAGS) -c $<
 
 all: $(COMPLIB)
 
