Updated auto close bracket function, now it's smarter.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ deps.mak
 .libs/
 Makefile
 Makefile.in
+nbproject
 
 #-----------------------------------------------------------------------
 # / (root)
