--- a/src/makefile.win32
+++ b/src/makefile.win32
@@ -18,6 +18,10 @@ PREFIX = C:/libs
 RM = del
 -include ../localwin32.mk
 
+ifdef MSYS
+RM = rm -f
+endif
+
 GTK_INCLUDES= \
 	-I$(PREFIX)/include/gtk-2.0 \
 	-I$(PREFIX)/lib/gtk-2.0/include \
