CoffeeScript Lexer from Scintilla setup
These changes are enabling the CoffeeScript lexer from the Scintilla projekt.
The lexer is based on C and thus Geany can use the highlighting_styles_C for
COFFEESCRIPT, too. The filetypes.coffeescript inherits from C too, which is
working, but not that beauty. Some could adapt the the colours.

CTags are not enabled yet

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -12,6 +12,7 @@ C++=*.cpp;*.cxx;*.c++;*.cc;*.h;*.hpp;*.hxx;*.h++;*.hh;*.C;*.H;
 C#=*.cs;
 CMake=CMakeLists.txt;*.cmake;*.ctest;
 COBOL=*.cob;*.cpy;*.cbl;*.cobol;
+CoffeeScript=*.coffee;
 Conf=*.conf;*.ini;config;*rc;*.cfg;*.desktop;
 CSS=*.css;
 Cython=*.pyx;*.pxd;*.pxi;
