--- a/scintilla/Makefile.am
+++ b/scintilla/Makefile.am
@@ -11,6 +11,7 @@ lexers/LexAsm.cxx \
 lexers/LexBash.cxx \
 lexers/LexBasic.cxx \
 lexers/LexCOBOL.cxx \
+lexers/LexCoffeeScript.cxx \
 lexers/LexCPP.cxx \
 lexers/LexCSS.cxx \
 lexers/LexCaml.cxx \
