Add GTK3 version of our custom styles
Although GTK3 still have gtk_rc_parse_string(), it doesn't work anymore
for our overrides, so register proper CSS for them.

--- a/Makefile.am
+++ b/Makefile.am
@@ -24,8 +24,13 @@ SYS_DATA_FILES = \
 	$(srcdir)/data/templates/* \
 	$(srcdir)/data/templates/files/* \
 	$(srcdir)/data/colorschemes/* \
-	$(top_srcdir)/data/geany.glade \
+	$(top_srcdir)/data/geany.glade
+
+if GTK3
+	$(top_srcdir)/data/geany.css
+else
 	$(top_srcdir)/data/geany.gtkrc
+endif
 
 EXTRA_DIST = \
 	autogen.sh \
