--- a/configure.ac
+++ b/configure.ac
@@ -67,6 +67,7 @@ AS_IF([test "x$enable_gtk3" = xyes],
 	   gtk_min_version=3.0],
 	  [gtk_package=gtk+-2.0
 	   gtk_min_version=2.16])
+AM_CONDITIONAL([GTK3], [test "x$gtk_package" = "xgtk+-3.0"])
 
 # GTK/GLib/GIO checks
 gtk_modules="$gtk_package >= $gtk_min_version glib-2.0 >= 2.20"
