--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -47,7 +47,7 @@ Python=*.py;*.pyw;
 reStructuredText=*.rest;*.reST;*.rst;
 R=*.R;*.r;
 Ruby=*.rb;*.rhtml;*.ruby;
-Scala=*.scl;
+Scala=*.scala;*.scl;
 Sh=*.sh;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.zsh;*.ash;*.bash;*.m4;
 SQL=*.sql;
 Tcl=*.tcl;*.tk;*.wish;
