Add support for Abaqus
Support for Abaqus inp files (scintilla lexer, file type and tag manager)

Signed-off-by: touste

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -2,6 +2,7 @@
 # Insert as many items as you want, seperate them with a ";".
 # See Geany's main documentation for details.
 [Extensions]
+Abaqus=*.inp;
 Abc=*.abc;*.abp;
 ActionScript=*.as;
 Ada=*.adb;*.ads;
