Fix custom icons on Windows
Install all icons on Windows, as well as a theme index because the
system doesn't have one and one is required.

Also install the theme index on non-Windows, although it shouldn't
be necessary because the system is likely to provide one.

--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -1,6 +1,9 @@
 SUBDIRS =  16x16 24x24 32x32 48x48 scalable tango
 
-EXTRA_DIST = geany.ico
+iconsdir = $(datadir)/icons/hicolor
+
+dist_icons_DATA = index.theme
+dist_noinst_DATA = geany.ico
 
 gtk_update_icon_cache = gtk-update-icon-cache -f -t
 
