Don't install themes index on non-Windows
On non-Windows, the icons are installed on the system's icon directory,
so installing our index.theme might override the system's one.  Since
it's highly unlikely the theme index is missing on non-Windows, just
don't install it.

--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -1,8 +1,11 @@
 SUBDIRS =  16x16 24x24 32x32 48x48 scalable tango
 
+# only install index.theme on Windows
+if MINGW
 iconsdir = $(datadir)/icons/hicolor
-
 dist_icons_DATA = index.theme
+endif
+
 dist_noinst_DATA = geany.ico
 
 gtk_update_icon_cache = gtk-update-icon-cache -f -t
