Added support to the SConscript files, the scons config files. They are normal python files without py ext.

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -44,7 +44,7 @@ Pascal=*.pas;*.pp;*.inc;*.dpr;*.dpk;
 Perl=*.pl;*.perl;*.pm;*.agi;*.pod;
 PHP=*.php;*.php3;*.php4;*.php5;*.phtml;
 Po=*.po;*.pot;
-Python=*.py;*.pyw;
+Python=*.py;*.pyw;SConstruct;
 reStructuredText=*.rest;*.reST;*.rst;
 R=*.R;*.r;
 Ruby=*.rb;*.rhtml;*.ruby;
