--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,8 @@ Makefile.in
 /*.tar.*
 /TODO.*
 /.waf-*
+/.cproject
+/.project
 
 #-----------------------------------------------------------------------
 # /po/
