--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -2,11 +2,9 @@
 # Insert as many items as you want, seperate them with a ";".
 # See Geany's main documentation for details.
 [Extensions]
-Abaqus=*.inp;
 Abc=*.abc;*.abp;
 ActionScript=*.as;
 Ada=*.adb;*.ads;
-Asciidoc=*.asciidoc;
 ASM=*.asm;
 CAML=*.ml;*.mli;
 C=*.c;*.h;
@@ -28,6 +26,7 @@ Fortran=*.f90;*.f95;*.f03;
 FreeBasic=*.bas;*.bi;
 Genie=*.gs;
 GLSL=*.glsl;*.frag;*.vert;
+Go=*.go;
 Haskell=*.hs;*.lhs;
 Haxe=*.hx;
 HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;
@@ -45,12 +44,12 @@ Pascal=*.pas;*.pp;*.inc;*.dpr;*.dpk;
 Perl=*.pl;*.perl;*.pm;*.agi;*.pod;
 PHP=*.php;*.php3;*.php4;*.php5;*.phtml;
 Po=*.po;*.pot;
-Python=*.py;*.pyw;SConstruct;SConscript;
+Python=*.py;*.pyw;
 reStructuredText=*.rest;*.reST;*.rst;
 R=*.R;*.r;
 Ruby=*.rb;*.rhtml;*.ruby;
-Scala=*.scala;*.scl;
-Sh=*.sh;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.zsh;*.ash;*.bash;*.m4;
+Scala=*.scl;
+Sh=*.sh;*.ebuild;*.eclass;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.zsh;*.ash;*.bash;*.m4;
 SQL=*.sql;
 Tcl=*.tcl;*.tk;*.wish;
 Txt2tags=*.t2t;
