Add support for the Go programming language
- syntax highlighting
- support for the go compiler (as opposed to gccgo)

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -28,6 +28,7 @@ Fortran=*.f90;*.f95;*.f03;
 FreeBasic=*.bas;*.bi;
 Genie=*.gs;
 GLSL=*.glsl;*.frag;*.vert;
+Go=*.go;
 Haskell=*.hs;*.lhs;
 Haxe=*.hx;
 HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;
@@ -63,7 +64,7 @@ None=*;
 
 # Note: restarting is required after editing groups
 [Groups]
-Programming=Cython;Genie;Scala;
+Programming=Cython;Genie;Go;Scala;
 Script=
 Markup=
 Misc=
