Filetypes: Add some Ruby file extensions

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -50,7 +50,7 @@ Python=*.py;*.pyw;SConstruct;SConscript;
 reStructuredText=*.rest;*.reST;*.rst;
 R=*.R;*.r;
 Rust=*.rs
-Ruby=*.rb;*.rhtml;*.ruby;
+Ruby=*.rb;*.rhtml;*.ruby;*.gemspec;Gemfile;rakefile;Rakefile;
 Scala=*.scala;*.scl;
 Sh=*.sh;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.zsh;*.ash;*.bash;*.m4;
 SQL=*.sql;
