Filetypes: Add 'rakefile' all lowercase version

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -48,7 +48,7 @@ Po=*.po;*.pot;
 Python=*.py;*.pyw;SConstruct;SConscript;
 reStructuredText=*.rest;*.reST;*.rst;
 R=*.R;*.r;
-Ruby=*.rb;*.rhtml;*.ruby;*.gemspec;Gemfile;Rakefile;
+Ruby=*.rb;*.rhtml;*.ruby;*.gemspec;Gemfile;rakefile;Rakefile;
 Scala=*.scala;*.scl;
 Sh=*.sh;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.zsh;*.ash;*.bash;*.m4;
 SQL=*.sql;
