--- a/data/filetypes.Go.conf
+++ b/data/filetypes.Go.conf
@@ -49,12 +49,12 @@ context_action_cmd=
 #type=1
 
 [build-menu]
-FT_00_LB=go _run
-FT_00_CM=go run %e.go
+FT_00_LB=go _build
+FT_00_CM=go build %f
 FT_00_WD=
-FT_01_LB=go _build
-FT_01_CM=go build %e.go
-FT_01_WD=
 FT_02_LB=go te_st
 FT_02_CM=go test
 FT_02_WD=
+EX_00_LB=go _run
+EX_00_CM=go run %f
+EX_00_WD=
