--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -49,6 +49,7 @@ Po=*.po;*.pot;
 Python=*.py;*.pyw;SConstruct;SConscript;
 reStructuredText=*.rest;*.reST;*.rst;
 R=*.R;*.r;
+Rust=*.rs
 Ruby=*.rb;*.rhtml;*.ruby;
 Scala=*.scala;*.scl;
 Sh=*.sh;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.zsh;*.ash;*.bash;*.m4;
@@ -64,7 +65,7 @@ None=*;
 
 # Note: restarting is required after editing groups
 [Groups]
-Programming=Cython;Genie;Go;Scala;
+Programming=Cython;Genie;Go;Rust;Scala;
 Script=
 Markup=
 Misc=
