--- a/Makefile.am
+++ b/Makefile.am
@@ -52,6 +52,11 @@ EXTRA_DIST = \
 	$(SYS_DATA_FILES) \
 	$(WIN32_BUILD_FILES)
 
+vapidir = $(datadir)/vala/vapi
+dist_vapi_DATA = \
+	plugins/bindings/vapi/geany.deps \
+	plugins/bindings/vapi/geany.vapi
+
 DISTCLEANFILES = \
 	geany.desktop \
 	intltool-extract \
