Added Graphviz filetype

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -26,6 +26,7 @@ Fortran=*.f90;*.f95;*.f03;
 FreeBasic=*.bas;*.bi;
 Genie=*.gs;
 GLSL=*.glsl;*.frag;*.vert;
+Graphviz=*.gv;*.dot;
 Haskell=*.hs;*.lhs;
 Haxe=*.hx;
 HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;
