Added Graphviz custom filetype
Closes #125

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -30,6 +30,7 @@ FreeBasic=*.bas;*.bi;
 Genie=*.gs;
 GLSL=*.glsl;*.frag;*.vert;
 Go=*.go;
+Graphviz=*.gv;*.dot;
 Haskell=*.hs;*.lhs;*.hs-boot;*.lhs-boot;
 Haxe=*.hx;
 HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;
@@ -67,7 +68,7 @@ None=*;
 # Note: restarting is required after editing groups
 [Groups]
 Programming=Cython;Genie;Go;Rust;Scala;
-Script=
+Script=Graphviz;
 Markup=
 Misc=
 None=
