.bash_profile, .zprofile & /etc/profile support
Add syntax highlighting for *profile files.

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -52,7 +52,7 @@ R=*.R;*.r;
 Rust=*.rs
 Ruby=*.rb;*.rhtml;*.ruby;*.gemspec;Gemfile;rakefile;Rakefile;
 Scala=*.scala;*.scl;
-Sh=*.sh;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.mksh;*.zsh;*.ash;*.bash;*.m4;
+Sh=*.sh;configure;configure.in;configure.in.in;configure.ac;*.ksh;*.mksh;*.zsh;*.ash;*.bash;*.m4;*profile;
 SQL=*.sql;
 Tcl=*.tcl;*.tk;*.wish;
 Txt2tags=*.t2t;
