--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -46,6 +46,7 @@ Pascal=*.pas;*.pp;*.inc;*.dpr;*.dpk;
 Perl=*.pl;*.perl;*.pm;*.agi;*.pod;
 PHP=*.php;*.php3;*.php4;*.php5;*.phtml;
 Po=*.po;*.pot;
+PowerShell=*.ps1;*.psm1;
 Python=*.py;*.pyw;SConstruct;SConscript;
 reStructuredText=*.rest;*.reST;*.rst;
 R=*.R;*.r;
