--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -50,6 +50,7 @@ Perl=*.pl;*.perl;*.pm;*.agi;*.pod;
 PHP=*.php;*.php3;*.php4;*.php5;*.phtml;
 Po=*.po;*.pot;
 Python=*.py;*.pyw;SConstruct;SConscript;wscript;
+PowerShell=*.ps1;*.psm1;
 reStructuredText=*.rest;*.reST;*.rst;
 R=*.R;*.r;
 Rust=*.rs
