--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -46,7 +46,7 @@ Pascal=*.pas;*.pp;*.inc;*.dpr;*.dpk;
 Perl=*.pl;*.perl;*.pm;*.agi;*.pod;
 PHP=*.php;*.php3;*.php4;*.php5;*.phtml;
 Po=*.po;*.pot;
-Python=*.py;*.pyw;SConstruct;SConscript;
+Python=*.py;*.pyw;SConstruct;SConscript;wscript;
 reStructuredText=*.rest;*.reST;*.rst;
 R=*.R;*.r;
 Rust=*.rs
