Adding *.aux and *.bib as default (La)TeX file types

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -34,7 +34,7 @@ Haxe=*.hx;
 HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;
 Java=*.java;*.jsp;
 Javascript=*.js;
-LaTeX=*.tex;*.sty;*.idx;*.ltx;*.latex;
+LaTeX=*.tex;*.sty;*.idx;*.ltx;*.latex;*.aux;*.bib;
 Lisp=*.lisp;
 Lua=*.lua;
 Make=*.mak;*.mk;GNUmakefile;makefile;Makefile;makefile.*;Makefile.*;
