Add CUDA C/C++ support
Closes #147

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -1,5 +1,5 @@
 # Filetype extension configuration file for Geany
-# Insert as many items as you want, seperate them with a ";".
+# Insert as many items as you want, separate them with a ";".
 # See Geany's main documentation for details.
 [Extensions]
 Abaqus=*.inp;
@@ -12,6 +12,7 @@ Batch=*.bat;*.cmd;*.nt;
 CAML=*.ml;*.mli;
 C=*.c;*.h;
 C++=*.cpp;*.cxx;*.c++;*.cc;*.h;*.hpp;*.hxx;*.h++;*.hh;*.C;*.H;
+CUDA=*.cu;*.cuh;*.h;
 C#=*.cs;
 CMake=CMakeLists.txt;*.cmake;*.ctest;
 COBOL=*.cob;*.cpy;*.cbl;*.cobol;
@@ -67,7 +68,7 @@ None=*;
 
 # Note: restarting is required after editing groups
 [Groups]
-Programming=Cython;Genie;Go;Rust;Scala;
+Programming=CUDA;Cython;Genie;Go;Rust;Scala;
 Script=Graphviz;
 Markup=
 Misc=
