Add CUDA C/C++ support.

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -11,6 +11,7 @@ ASM=*.asm;
 CAML=*.ml;*.mli;
 C=*.c;*.h;
 C++=*.cpp;*.cxx;*.c++;*.cc;*.h;*.hpp;*.hxx;*.h++;*.hh;*.C;*.H;
+CUDA=*.cu;*.cuh;*.h;
 C#=*.cs;
 CMake=CMakeLists.txt;*.cmake;*.ctest;
 COBOL=*.cob;*.cpy;*.cbl;*.cobol;
@@ -65,7 +66,7 @@ None=*;
 
 # Note: restarting is required after editing groups
 [Groups]
-Programming=Cython;Genie;Go;Rust;Scala;
+Programming=CUDA;Cython;Genie;Go;Rust;Scala;
 Script=
 Markup=
 Misc=
