Tests: add test for PHP 5.5 additional usage of the "class" keyword

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -185,6 +185,7 @@ test_sources = \
 	objectivec_property.mm			\
 	objectivec_protocol.mm			\
 	Package.pm						\
+	php5_5_class_kw.php				\
 	procedure_pointer_module.f90	\
 	property.cs						\
 	prototype.h						\
