Make C and CPP Headers separate filetypes
Accidently compiling headers makes gcc generate .gch files and
thereafter ignore changes to the source when compiling any file
that #includes the header.

So making filetypes that use compile commands that do not generate
the pre-compiled headers removes the risk of erroneously generating
header files.

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -9,8 +9,10 @@ Ada=*.adb;*.ads;
 Asciidoc=*.asciidoc;
 ASM=*.asm;
 CAML=*.ml;*.mli;
-C=*.c;*.h;
-C++=*.cpp;*.cxx;*.c++;*.cc;*.h;*.hpp;*.hxx;*.h++;*.hh;*.C;*.H;
+C=*.c;
+C Header=*.h;
+C++=*.cpp;*.cxx;*.c++;*.cc;*.C;
+C++ Header=*.h;*.hpp;*.hxx;*.h++;*.hh;*.H;
 C#=*.cs;
 CMake=CMakeLists.txt;*.cmake;*.ctest;
 COBOL=*.cob;*.cpy;*.cbl;*.cobol;
