Haskell filetype fixes

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -29,7 +29,7 @@ FreeBasic=*.bas;*.bi;
 Genie=*.gs;
 GLSL=*.glsl;*.frag;*.vert;
 Go=*.go;
-Haskell=*.hs;*.lhs;
+Haskell=*.hs;*.lhs;*.hs-boot;*.lhs-boot;
 Haxe=*.hx;
 HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;
 Java=*.java;*.jsp;
