CoffeeScript Lexer from Scintilla setup
These changes are enabling the CoffeeScript lexer from the Scintilla
project.The lexer is based on C and thus Geany can use the
highlighting_styles_C for COFFEESCRIPT, too. The filetypes.coffeescript
inherits from C too, which is working, but not that beautiful. Someone
could adapt the the colours.

CTags are not enabled yet

The code from GitHub user kleingeist (from PR 58) has been rebased onto
current master.

--- a/scintilla/Makefile.am
+++ b/scintilla/Makefile.am
@@ -12,6 +12,7 @@ lexers/LexAsm.cxx \
 lexers/LexBash.cxx \
 lexers/LexBasic.cxx \
 lexers/LexCOBOL.cxx \
+lexers/LexCoffeeScript.cxx \
 lexers/LexCPP.cxx \
 lexers/LexCSS.cxx \
 lexers/LexCaml.cxx \
