added some erlang-specific configurations

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -20,7 +20,7 @@ Cython=*.pyx;*.pxd;*.pxi;
 D=*.d;*.di;
 Diff=*.diff;*.patch;*.rej;
 Docbook=*.docbook;
-Erlang=*.erl;
+Erlang=*.erl;*.hrl;
 F77=*.f;*.for;*.ftn;*.f77;*.F;*.FOR;*.FTN;*.fpp;*.FPP
 Ferite=*.fe;
 Forth=*.fs;*.fth;
