PHP: Recognize vertical tab (\v) and form-feed (\f) as whitespaces
Even though PHP doesn't handle those very well (it emits warnings about
"unexpected character"), it still counts them as whitespaces, so
properly handle them as such.

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -231,6 +231,7 @@ test_sources = \
 	traits.php						\
 	union.f							\
 	value.f							\
+	whitespaces.php					\
 	$(NULL)
 test_results = $(test_sources:=.tags)
 
