Add support for DOS, OS/2 and Windows batch files
* Uses existing LexOthers.cxx from Scintilla already in use by Geany
* "identifier" style mapping goes to "string" for better presentation
even if it's semantically incorrect, we'll change it back if it causes
issues for anyone.
* Filetype configuration and keywords taken from Don Ho's Notepad++.

Closes #160

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -8,6 +8,7 @@ ActionScript=*.as;
 Ada=*.adb;*.ads;
 Asciidoc=*.asciidoc;
 ASM=*.asm;
+Batch=*.bat;*.cmd;*.nt;
 CAML=*.ml;*.mli;
 C=*.c;*.h;
 C++=*.cpp;*.cxx;*.c++;*.cc;*.h;*.hpp;*.hxx;*.h++;*.hh;*.C;*.H;
