Adding .xul and .dtd extensions with XML
See: http://en.wikipedia.org/wiki/.xul and http://en.wikipedia.org/wiki/.dtd

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -59,7 +59,7 @@ Txt2tags=*.t2t;
 Vala=*.vala;*.vapi;
 Verilog=*.v;
 VHDL=*.vhd;*.vhdl;
-XML=*.xml;*.sgml;*.xsl;*.xslt;*.xsd;*.xhtml;
+XML=*.xml;*.sgml;*.xsl;*.xslt;*.xsd;*.xhtml;*.xul;*.dtd;
 YAML=*.yaml;*.yml;
 None=*;
 
