Adding .properties file under Conf markup
See http://en.wikipedia.org/wiki/.properties

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -15,7 +15,7 @@ C++=*.cpp;*.cxx;*.c++;*.cc;*.h;*.hpp;*.hxx;*.h++;*.hh;*.C;*.H;
 C#=*.cs;
 CMake=CMakeLists.txt;*.cmake;*.ctest;
 COBOL=*.cob;*.cpy;*.cbl;*.cobol;
-Conf=*.conf;*.ini;config;*rc;*.cfg;*.desktop;
+Conf=*.conf;*.ini;config;*rc;*.cfg;*.desktop;*.properties;
 CSS=*.css;
 Cython=*.pyx;*.pxd;*.pxi;
 D=*.d;*.di;
