added Literate Haskell filetype

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -32,7 +32,8 @@ Genie=*.gs;
 GLSL=*.glsl;*.frag;*.vert;
 Go=*.go;
 Graphviz=*.gv;*.dot;
-Haskell=*.hs;*.lhs;*.hs-boot;*.lhs-boot;
+Haskell=*.hs;*.hs-boot;
+LiterateHaskell=*.lhs;*.lhs-boot;
 Haxe=*.hx;
 HTML=*.htm;*.html;*.shtml;*.hta;*.htd;*.htt;*.cfm;
 Java=*.java;*.jsp;
