reverted to mainline scintilla

--- a/scintilla/Makefile.am
+++ b/scintilla/Makefile.am
@@ -41,8 +41,7 @@ lexers/LexTCL.cxx \
 lexers/LexTxt2tags.cxx \
 lexers/LexVHDL.cxx \
 lexers/LexVerilog.cxx \
-lexers/LexYAML.cxx \
-lexers/LexRust.cxx
+lexers/LexYAML.cxx
 
 SRCS= \
 gtk/Converter.h \
