Adding *.iss file under Conf (InnoSetup files)
InnoSetup use the config file syntax for setup scripts.
File to try with:
https://github.com/nightingale-media-player/nightingale-hacking/blob/sb-trunk-oldxul/installer/windows/Nightingale.iss

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -16,7 +16,7 @@ CUDA=*.cu;*.cuh;*.h;
 C#=*.cs;
 CMake=CMakeLists.txt;*.cmake;*.ctest;
 COBOL=*.cob;*.cpy;*.cbl;*.cobol;
-Conf=*.conf;*.ini;config;*rc;*.cfg;*.desktop;*.properties;
+Conf=*.conf;*.ini;config;*rc;*.cfg;*.desktop;*.properties;*.iss;
 CSS=*.css;
 Cython=*.pyx;*.pxd;*.pxi;
 D=*.d;*.di;
