Updated appropriate files to add QML support

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -51,6 +51,7 @@ PHP=*.php;*.php3;*.php4;*.php5;*.phtml;
 Po=*.po;*.pot;
 Python=*.py;*.pyw;SConstruct;SConscript;wscript;
 PowerShell=*.ps1;*.psm1;
+QML=*.qml;
 reStructuredText=*.rest;*.reST;*.rst;
 R=*.R;*.r;
 Rust=*.rs
