--- a/data/snippets.conf
+++ b/data/snippets.conf
@@ -138,3 +138,12 @@ module=-module(%cursor%).
 export=-export(%cursor%).
 compile=-compile(%cursor%).
 include=-include(%cursor%).
+
+[QML]
+if=if (%cursor%)%block_cursor%
+else=else%block_cursor%
+for=for (i = 0; i < %cursor%; i++)%block_cursor%
+while=while (%cursor%)%block_cursor%
+do=do\n{\n\t%cursor%\n} while (%cursor%)\n%cursor%
+switch=switch (%cursor%)%brace_open%case %cursor%:\n\t\t%cursor%\n\t\tbreak;\n\tdefault:\n\t\t%cursor%\n%brace_close%%cursor%
+try=try%block%\ncatch (%cursor%)%block_cursor%
