Fix lexing 'lifetimes

--- a/data/filetypes.Rust.conf
+++ b/data/filetypes.Rust.conf
@@ -1,5 +1,34 @@
 # For complete documentation of this file, please see Geany's main documentation
-[styling=C]
+[styling]
+# Edit these in the colorscheme .conf file instead
+default=default
+comment=comment
+commentline=comment_line
+commentdoc=comment_doc
+preprocessorcomment=comment
+preprocessorcommentdoc=comment_doc
+number=number_1
+word=keyword_1
+word2=keyword_2
+string=string_1
+stringraw=string_2
+character=character
+uuid=other
+preprocessor=preprocessor
+operator=operator
+identifier=identifier_1
+# ignore 'lifetime syntax (disables highlighting for rest of line)
+stringeol=default
+#stringeol=string_eol
+verbatim=string_2
+regex=regex
+commentlinedoc=comment_line_doc
+commentdockeyword=comment_doc_keyword
+commentdockeyworderror=comment_doc_keyword_error
+globalclass=class
+# """verbatim"""
+tripleverbatim=string_2
+hashquotedstring=string_2
 
 [keywords]
 # all items must be in one line
