Nimrod support foundation based on Python lexer

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -43,6 +43,7 @@ Lua=*.lua;
 Make=*.mak;*.mk;GNUmakefile;makefile;Makefile;makefile.*;Makefile.*;
 Markdown=*.mdml;*.markdown;*.md;*.mkd;
 Matlab/Octave=*.m;
+Nimrod=*.nim;
 NSIS=*.nsi;*.nsh;
 Objective-C=*.m;*.mm;*.h;
 Pascal=*.pas;*.pp;*.inc;*.dpr;*.dpk;
