--- a/src/makefile.win32
+++ b/src/makefile.win32
@@ -61,7 +61,7 @@ else
 CFLAGS=-O2 $(CBASEFLAGS)
 endif
 
-OBJS =	about.o build.o callbacks.o dialogs.o document.o editor.o encodings.o filetypes.o \
+OBJS =	about.o build.o callbacks.o dialogs.o document.o editor.o encodings.o fileloc.o filetypes.o \
 		geanyentryaction.o geanymenubuttonaction.o geanyobject.o geanywraplabel.o highlighting.o \
 		keybindings.o keyfile.o log.o main.o msgwindow.o navqueue.o notebook.o \
 		plugins.o pluginutils.o prefs.o printing.o project.o sciwrappers.o search.o \
