An ongoing effort to improve the tool spawning situation under Windows.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -46,6 +46,7 @@ SRCS = \
 	toolbar.c toolbar.h \
 	tools.c tools.h \
 	sidebar.c sidebar.h \
+	spawn.c spawn.h \
 	ui_utils.c ui_utils.h \
 	utils.c utils.h
 
