Autotools: fix building the documentation in VPATH builds

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -9,26 +9,29 @@ EXTRA_DIST = geany.html geany.css geany.txt geany.1 \
 
 pdf: geany.txt
 	rst2latex -stg --documentoptions="10pt,a4paper" --output-encoding=utf8 $(srcdir)/geany.txt geany.tex
-	pdflatex geany.tex
+	(absbuilddir="$$(pwd)/$(builddir)"; \
+	 cd "$(srcdir)" && \
+	 pdflatex -output-directory="$$absbuilddir" "$$absbuilddir/geany.tex")
 	rm -f geany.tex geany.aux geany.log geany.out
-	mv $(srcdir)/geany.pdf geany-$(VERSION).pdf
+	mv geany.pdf geany-$(VERSION).pdf
 
 api-doc: Doxyfile
 	doxygen
 
 hacking-doc: ../HACKING
-	rst2html -stg --stylesheet=geany.css $^ hacking.html
+	rst2html -stg --stylesheet=$(srcdir)/geany.css $< hacking.html
 
 # when generating documentation, first try rst2html.py as it is the upstream default
 doc: geany.txt
 	(rst2html.py --version) < /dev/null > /dev/null 2>&1 && \
-	rst2html.py -stg --stylesheet=geany.css $(srcdir)/geany.txt geany.html || \
-	rst2html -stg --stylesheet=geany.css $(srcdir)/geany.txt geany.html
+	rst2html.py -stg --stylesheet=$(srcdir)/geany.css $< geany.html || \
+	rst2html -stg --stylesheet=$(srcdir)/geany.css $< geany.html
 
 doc-clean:
 	rm -f geany.html
 	rm -f geany.1
 	rm -f *.pdf
+	rm -f hacking.html
 
 uninstall-local:
 	rm -rf $(DOCDIR);
