Perl: added 't', 'cgi', 'CGI' and 'PL' extensions.

--- a/data/filetype_extensions.conf
+++ b/data/filetype_extensions.conf
@@ -46,7 +46,7 @@ Matlab/Octave=*.m;
 NSIS=*.nsi;*.nsh;
 Objective-C=*.m;*.mm;*.h;
 Pascal=*.pas;*.pp;*.inc;*.dpr;*.dpk;
-Perl=*.pl;*.perl;*.pm;*.agi;*.pod;
+Perl=*.pl;*.perl;*.pm;*.agi;*.pod;*.t;*.cgi;*.CGI;*.PL;
 PHP=*.php;*.php3;*.php4;*.php5;*.phtml;
 Po=*.po;*.pot;
 Python=*.py;*.pyw;SConstruct;SConscript;wscript;
