Added tests for the inclusion of ASSOCIATE in the tag manager

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -126,6 +126,7 @@ test_sources = \
 	extern_variable.h				\
 	forall_module.f90				\
 	format.pl						\
+	fortran_associate.f90		\
 	func_typedef.h					\
 	general.cs						\
 	hex2dec.sql						\
