Fortran: fix line continuation inside comments
Fix improperly handling '&' at the end of the first comment line after
a non-comment line as a line continuation.

Part of bug #1023.

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -127,6 +127,7 @@ test_sources = \
 	forall_module.f90				\
 	format.pl						\
 	fortran_associate.f90			\
+	fortran_line_continuation.f90	\
 	func_typedef.h					\
 	general.cs						\
 	hex2dec.sql						\
