Support F2003 array syntax and F2008 coarrays
Fortran 2003 allows '[' and ']' as array constructors in addition to
the legacy '(/' and '/)'. Fortran 2008 allows '[]' as part of a
CODIMENSION specifier, which can either be `codimension[]` in
the type-spec; or as either `variable[]` or `variable()[]` in
the entry-spec.

Credit to Colomban Wendling for the skipOverSquares logic, and
treating `codimension` as a special-case.

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -221,6 +221,7 @@ test_sources = \
 	simple.tcl						\
 	spurious_label_tags.c			\
 	sql_single_quote.sql			\
+	square_parens.f90				\
 	state_machine.v					\
 	static_array.c					\
 	stdcall.f						\
