Fortran: parse Fortran 2003 enums
Allow for not-yet-standard enum naming using `:: name` syntax, see
http://docs.cray.com/books/S-3692-51/html-S-3692-51/z970507905n9123.html

Test cases contributed by Adam Hirst, thanks.

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -121,7 +121,9 @@ test_sources = \
 	directives.c					\
 	dopbl2.f						\
 	enum.c							\
+	enum.f90						\
 	enum.java						\
+	enumerators.f90					\
 	events.cs						\
 	extern_variable.h				\
 	forall_module.f90				\
