Fortran: allow keywords as names
Allow keywords for names of modules, programs, types, interfaces,
structures and enums.

Test case contributed by Adam Hirst, thanks.

--- a/tests/ctags/Makefile.am
+++ b/tests/ctags/Makefile.am
@@ -158,6 +158,7 @@ test_sources = \
 	keyword_implicit.cs				\
 	keyword_interface.cs			\
 	keyword_namespace.cs			\
+	keyword_names.f90				\
 	keyword_out.cs					\
 	keyword_override.cs				\
 	keyword_params.cs				\
